--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,22 @@
-// Начните писать стили здесь
+@import "./global/base.scss";
+@import "./global/service";
+@import "./global/fonts.scss";
+@import "./global/text-styles.scss";
+@import "./global/button.scss";
+@import "./blocks/body.scss";
+@import "./blocks/main-header.scss";
+@import "./blocks/main-nav.scss";
+@import "./blocks/intro.scss";
+@import "./blocks/product.scss";
+@import "./blocks/features.scss";
+@import "./blocks/advantages.scss";
+@import "./blocks/reviews.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/main-form.scss";
+@import "./blocks/filter.scss";
+@import "./blocks/main-catalog";
+@import "./blocks/catalog.scss";
+@import "./blocks/production";
+@import "./blocks/modal.scss";
+@import "./blocks/modal-form.scss";
