Исправлены ошибки в стилизации блоков

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,5 +1,5 @@
 .contacts__title {
-  padding: 0 29px;
+  padding: 0 30px;
   margin-bottom: 28px;
 }
 
@@ -13,12 +13,12 @@
   font-size: 14px;
   line-height: 2.14;
   font-style: normal;
-  color: #444444;
+  color: $color-text-light;
   justify-items: start;
 }
 
 .contacts__email-content {
-  color: #444444;
+  color: $color-text-light;
   border-bottom: 1px solid #62d1ba;
   text-decoration: none;
 }
