--- a/source/sass/blocks/main-catalog.scss
+++ b/source/sass/blocks/main-catalog.scss
@@ -1,6 +1,6 @@
 .main-catalog__title {
   min-height: 177px;
-  background-color: #f1f1f1;
+  background-color: $color-bg-grey;
   text-align: center;
   padding-top: 74px;
   box-sizing: border-box;
@@ -11,6 +11,7 @@
 
 .main-catalog__wrapper {
   padding: 30px 30px;
+  margin-bottom: 26px;
 }
 
 .main-catalog__list {
