--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -1,20 +1,6 @@
-.modal-container {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  background-color: rgba(242, 242, 242, 0.9);
-}
-
-// Uncomment below to disable modal
-
-// .modal-container--closed {
-//   display: none;
-// }
-
 .modal {
   width: 320px;
-  background-color: #ffffff;
+  background-color: $color-white;
   margin: auto;
   padding: 28.5px 28px 46px;
   box-sizing: border-box;
