--- a/source/sass/blocks/production.scss
+++ b/source/sass/blocks/production.scss
@@ -1,7 +1,6 @@
 .production {
-  border: 1px solid #ececec;
+  border: 1px solid $color-border;
   padding: 21.5px 0 33px;
-  margin-bottom: 26px;
 }
 
 .production__subtitle {
