--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -5,7 +5,7 @@
 }
 
 .catalog__item {
-  border: 1px solid #ececec;
+  border: 1px solid $color-border;
 }
 
 .catalog__link {
@@ -18,7 +18,7 @@
 }
 
 .catalog__subtitle {
-  color: #000000;
+  color: $color-text;
   line-height: 1.41;
   padding-left: 28px;
   margin-bottom: 6.5px;
