--- a/source/sass/blocks/filter.scss
+++ b/source/sass/blocks/filter.scss
@@ -106,6 +106,7 @@
   &--radio,
   &--checkbox {
     position: relative;
+    cursor: pointer;
   }
 }
 
@@ -113,8 +114,8 @@
   position: absolute;
   top: -12px;
   left: -62px;
-  background-color: #ffffff;
-  border: 2px solid #444444;
+  background-color: $color-white;
+  border: 2px solid $color-text-light;
 
   &--radio {
     width: 38px;
@@ -136,13 +137,13 @@
   font-size: 17px;
   line-height: 1.06;
   border: none;
-  border-bottom: 2px solid #000000;
+  border-bottom: 2px solid $color-text;
 
   &--textarea {
     width: 260px;
     height: 142px;
     padding: 17px;
-    border: 2px solid #444444;
+    border: 2px solid $color-text-light;
     box-sizing: border-box;
     margin-bottom: 18px;
   }
@@ -151,7 +152,7 @@
 .filter__notification {
   font-size: 14px;
   line-height: 1.14;
-  color: #444444;
+  color: $color-text-light;
   margin: 0;
   margin-bottom: 29px;
 }
