--- a/source/sass/blocks/main-form.scss
+++ b/source/sass/blocks/main-form.scss
@@ -1,6 +1,6 @@
 .main-form__title {
   min-height: 177px;
-  background-color: #f1f1f1;
+  background-color: $color-bg-grey;
   text-align: center;
   padding-top: 74px;
   box-sizing: border-box;
@@ -13,7 +13,7 @@
 .main-form__subtitle {
   font-size: 13px;
   line-height: 1.85;
-  color: #444444;
+  color: $color-text-light;
   padding: 0 30px;
   margin-bottom: 27px;
 }
