--- a/source/sass/blocks/page-body.scss
+++ b/source/sass/blocks/page-body.scss
@@ -1,9 +1,9 @@
-.page__body {
+.page-body {
   width: 320px;
   min-height: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #ffffff;
+  background-color: $color-white;
   margin: 0 auto;
   font-family: "Open sans", sans-serif;
 }
