--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -18,7 +18,12 @@
   padding: 0;
   font-size: 15px;
   line-height: 1.6;
-  color: #444444;
+  color: $color-text-light;
+}
+
+.product__features {
+  margin: 0;
+  margin-bottom: 20px;
 }
 
 .product__image {
@@ -29,7 +34,7 @@
   display: block;
   margin: 0;
   text-align: center;
-  color: #444444;
+  color: $color-text-light;
   margin-bottom: 24.5px;
   font-size: 17px;
   line-height: 1.41;
