--- a/source/sass/global/text-styles.scss
+++ b/source/sass/global/text-styles.scss
@@ -3,6 +3,7 @@
   padding: 0;
   font-size: 25px;
   line-height: 1.11;
+  color: $color-text;
 }
 
 .subtitle {
@@ -16,5 +17,5 @@
   padding: 0;
   font-weight: 700;
   text-transform: uppercase;
-  color: #63d1bb;
+  color: $color-green-light;
 }
