Исправлены названия блоков

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,9 +1,9 @@
 @import "./global/base.scss";
-@import "./global/service";
+@import "./global/visually-hidden";
 @import "./global/fonts.scss";
 @import "./global/text-styles.scss";
 @import "./global/button.scss";
-@import "./global/colors.scss";
+@import "./global/variables.scss";
 @import "./blocks/page-body.scss";
 @import "./blocks/main-header.scss";
 @import "./blocks/main-nav.scss";
