--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,11 +1,22 @@
 .copyright {
-  width: 260px;
-  margin: 0 auto;
   display: flex;
   align-items: center;
-  border-top: 1px solid #e5e5e5;
-  padding: 23px 39px 22px;
-  box-sizing: border-box;
+
+  @media (max-width: $mobile-width-only) {
+    width: 260px;
+    margin: 0 auto;
+    border-top: 1px solid #e5e5e5;
+    padding: 23px 39px 22px;
+    box-sizing: border-box;
+  }
+
+  @media (min-width: $tablet-width) {
+    padding-bottom: 5px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-bottom: 8px;
+  }
 }
 
 .copyright__text {
