--- a/source/sass/blocks/page-body.scss
+++ b/source/sass/blocks/page-body.scss
@@ -6,4 +6,12 @@
   background-color: $color-white;
   margin: 0 auto;
   font-family: "Open sans", sans-serif;
+
+  @media (min-width: $tablet-width) {
+    width: 768px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1150px;
+  }
 }
