--- a/source/sass/global/button.scss
+++ b/source/sass/global/button.scss
@@ -5,14 +5,14 @@
   margin: 0;
   padding: 0;
   background-color: transparent;
-  border: 2px solid $color-text-light;
+  border: 2px solid #444444;
   font-size: 18px;
   line-height: 1.11;
   text-transform: uppercase;
   text-decoration: none;
   text-align: center;
   font-weight: 700;
-  color: $color-text-light;
+  color: #444444;
   box-sizing: border-box;
   cursor: pointer;
 }
