--- a/source/sass/global/text-styles.scss
+++ b/source/sass/global/text-styles.scss
@@ -3,7 +3,7 @@
   padding: 0;
   font-size: 25px;
   line-height: 1.11;
-  color: $color-text;
+  color: #000000;
 }
 
 .subtitle {
@@ -15,5 +15,5 @@
 .subtitle--green {
   font-weight: 700;
   text-transform: uppercase;
-  color: $color-green-light;
+  color: #63d1bb;
 }
