--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,6 +1,14 @@
 $color-text: #000000;
 $color-text-light: #444444;
 $color-green-light: #63d1bb;
+$color-green-dark: #56c3b2;
 $color-white: #ffffff;
 $color-bg-grey: #f1f1f1;
 $color-border: #ececec;
+$color-bg-header: #fafafa;
+$color-nav-border: rgba(0, 0, 0, 0.1);
+$color-email-underline: #62d1ba;
+
+$tablet-width: 768px;
+$desktop-width: 1150px;
+$mobile-width-only: 767px;
