--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,16 +1,46 @@
 .advantages {
   padding: 0 30px;
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 50px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 39px 250px 5px 225px;
+  }
 }
 
 .advantages__title {
-  margin-bottom: 28px;
+  margin-bottom: 27px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 43px;
+    line-height: 1.16;
+    margin-bottom: 42px;
+  }
+
+  @media (min-width: $desktop-width) {
+    font-size: 53px;
+    line-height: 1.08;
+    margin-bottom: 40px;
+  }
 }
 
 .advantages__list {
   list-style-type: none;
   margin: 0;
-  margin-bottom: 27px;
+  margin-bottom: 29px;
   padding: 0;
+
+  @media (min-width: $tablet-width) {
+    max-height: 500px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-bottom: 26px;
+  }
 }
 
 .advantages__item {
@@ -20,8 +50,19 @@
   line-height: 1.18;
   padding-top: 55px;
 
-  &:not(:last-child) {
-    margin-bottom: 28px;
+  @media (max-width: $mobile-width-only) {
+    &:not(:last-child) {
+      margin-bottom: 28px;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 56px;
+    margin-right: 101px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-right: 116px;
   }
 
   &--eco::before {
@@ -65,4 +106,11 @@
     top: 2px;
     left: 3px;
   }
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 1.1;
+    max-width: 325px;
+  }
 }
+
