--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -8,6 +8,13 @@
   color: $color-text-light;
 }
 
+.features__parameter {
+  border-bottom: 1px solid $color-border;
+  padding-top: 8px;
+}
+
 .features__description {
   margin: 0;
+  border-bottom: 1px solid $color-border;
+  padding-top: 8px;
 }
