--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -7,4 +7,17 @@
   align-items: center;
   padding: 0 30px;
   box-sizing: border-box;
+
+  @media (min-width: $tablet-width) {
+    min-height: 143px;
+    padding: 0 50px;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+.footer__logo {
+  @media (max-width: $mobile-width-only) {
+    display: none;
+  }
 }
