--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,9 +1,39 @@
 .intro {
   min-height: 490px;
-  background-color: $color-bg-grey;
+  background-color: $color-bg-header;
   background-image: url("../../img/intro-mobile.jpg");
   background-position: 100% -14%;
   background-repeat: no-repeat;
+
+  @media (min-width: $tablet-width) {
+    position: relative;
+    min-height: 731px;
+    background-image: url("../../img/intro-tablet.jpg");
+    background-position: 50% 452%;
+    background-repeat: no-repeat;
+  }
+
+  @media (min-width: $desktop-width) {
+    position: relative;
+    min-height: 705px;
+    background-image: url("../../img/intro-desktop.jpg");
+    background-position: 50% 150%;
+    background-repeat: no-repeat;
+  }
+
+  &::after {
+    @media (min-width: $tablet-width) {
+      position: absolute;
+      bottom: 36px;
+      content: url("../../img/zigzag-fill-tablet.svg");
+    }
+
+    @media (min-width: $desktop-width) {
+      position: absolute;
+      bottom: -2px;
+      content: url("../../img/zigzag-fill-desktop.svg");
+    }
+  }
 }
 
 .intro__title {
@@ -12,6 +42,21 @@
   font-size: 27px;
   text-align: center;
   line-height: 1.11;
+
+  @media (min-width: $tablet-width) {
+    font-size: 43px;
+    line-height: 1.16;
+    margin-bottom: 372px;
+    padding: 0;
+    padding-top: 89px;
+  }
+
+  @media (min-width: $desktop-width) {
+    font-size: 53px;
+    line-height: 1.08;
+    margin-bottom: 354px;
+    padding-top: 97px;
+  }
 }
 
 .intro__list {
@@ -20,6 +65,12 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
+
+  @media (min-width: $tablet-width) {
+    flex-direction: row;
+    padding: 0 51px;
+    margin-bottom: 40px;
+  }
 }
 
 .intro__item {
@@ -34,13 +85,28 @@
     background-image: url("../../img/interior-icon.svg");
     background-position: 87% 55%;
     background-repeat: no-repeat;
+
+    @media (min-width: $desktop-width) {
+      background-position: 92% 55%;
+    }
   }
 
   &--secondary {
-    background-color: #56c3b2;
+    background-color: $color-green-dark;
     background-image: url("/../../img/toy-icon.svg");
     background-position: 90% 50%;
     background-repeat: no-repeat;
+  }
+
+  @media (min-width: $tablet-width) {
+    width: 333px;
+    height: 119px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 525px;
+    height: 119px;
+    background-position: 93% 55%;
   }
 }
 
@@ -48,9 +114,19 @@
   display: block;
   text-decoration: none;
   color: $color-white;
-  padding: 24px 160px 31px 30px;
+  padding: 25px 160px 31px 30px;
   box-sizing: border-box;
   font-size: 19px;
   line-height: 1.26;
   font-weight: 700;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 1.5;
+    padding-left: 35px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 27px 303px 0 37px;
+  }
 }
