--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -1,24 +1,81 @@
 .main-header {
   position: relative;
+  width: auto;
   min-height: 79px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
+
+  @media (min-width: $tablet-width) {
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    // min-height: 89px;
+    // padding: 0 40px;
+  }
 }
 
 .main-header__logo {
-  margin-right: 67px;
-  padding-top: 5px;
+  object-fit: fill;
+
+  @media (max-width: $mobile-width-only) {
+    margin-right: 67px;
+    padding-top: 5px;
+  }
+
+  @media (min-width: $tablet-width) {
+    padding: 22px 57px 20px 49px;
+    margin-right: 150px;
+    width: 113px;
+    height: 46px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 149px;
+    height: 72px;
+    order: 1;
+    margin: 0;
+    margin-right: 100px;
+    padding: 0;
+  }
 }
 
 .main-header__toggle {
   display: inline-block;
   margin: 0;
-  margin-right: 31px;
+  margin-right: 30px;
   padding: 0;
   width: 20px;
   height: 14px;
   background-color: $color-white;
   border: none;
   cursor: pointer;
+
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
+}
+
+.main-header__text {
+  display: block;
+  margin: 0;
+  background-color: $color-bg-header;
+  border-top: 1px solid $color-nav-border;
+
+  @media (max-width: $mobile-width-only) {
+    display: none;
+  }
+
+  @media (min-width: $tablet-width) {
+    padding: 21px 27px 21px 96px;
+    font-size: 15px;
+    line-height: 1.6;
+    color: $color-text-light;
+    display: block;
+    order: 3;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 18px 49px 18px 94px;
+    order: 4;
+  }
 }
