--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,14 +1,46 @@
 //Uncomment below to close the menu//
-
 .main-nav--hidden {
   display: none;
 }
 
-.main-nav__wrapper {
-  position: absolute;
-  z-index: 1;
-  top: 79px;
-  left: 0;
-  display: flex;
-  flex-direction: column;
+.main-nav--visible {
+  @media (min-width: $tablet-width) {
+    display: flex;
+  }
+}
+
+.main-nav--primary {
+  @media (min-width: $tablet-width) {
+    order: 1;
+  }
+
+  @media (min-width: $desktop-width) {
+    order: 0;
+  }
+}
+
+.main-nav--secondary {
+  @media (min-width: $tablet-width) {
+    order: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    order: 1;
+  }
+}
+
+.main-nav--tertiary {
+  @media (max-width: $mobile-width-only) {
+    display: none;
+  }
+
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: flex;
+    flex-direction: row;
+    order: 1;
+  }
 }
