--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -6,6 +6,11 @@
   box-sizing: border-box;
   font-family: "Open sans", sans-serif;
   box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
+
+  @media (min-width: $tablet-width) {
+    width: 566px;
+    padding: 30px 94px 46px;
+  }
 }
 
 .modal__title {
@@ -13,4 +18,11 @@
   text-align: center;
   text-transform: uppercase;
   margin-bottom: 14px;
+  padding: 0 51px;
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
+    font-size: 30px;
+    line-height: 1.9;
+  }
 }
