--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -1,33 +1,144 @@
 .product {
+  position: relative;
   padding: 32px 30px;
+
+  @media (min-width: $tablet-width) {
+    display: grid;
+    padding: 0 50px;
+    grid-template-columns: auto auto 100px;
+    grid-template-rows: repeat(5, auto);
+    margin-bottom: 125px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 40px;
+    grid-template-columns: 118px auto auto;
+  }
+
+  &::after {
+    @media (min-width: $tablet-width) {
+      position: absolute;
+      bottom: -73px;
+      content: url("../../img/zigzag-line-tablet.svg");
+    }
+
+    @media (min-width: $desktop-width) {
+      position: absolute;
+      bottom: -100px;
+      left: 50px;
+      content: url("../../img/zigzag-line-desktop.svg");
+    }
+  }
 }
 
 .product__title {
   margin-bottom: 4px;
+
+  @media (min-width: $tablet-width) {
+    grid-column: 1 / 3;
+    grid-row: 1 /2;
+    font-size: 43px;
+    line-height: 1.16;
+    margin-bottom: 39px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 2 / 4;
+    grid-row: 1 / 2;
+    z-index: 1;
+    font-size: 53px;
+    line-height: 1.08;
+    padding: 72px 0 0 57px;
+    margin: 0;
+  }
 }
 
 .product__subtitle {
   display: block;
   line-height: 1.18;
   margin-bottom: 18px;
+
+  @media (min-width: $tablet-width) {
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+    text-align: center;
+    line-height: 1;
+    padding: 6px 26px 0 0;
+    margin: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    padding: 80px 0 0 45px;
+  }
 }
 
 .product__description {
   margin: 0;
-  margin-bottom: 28px;
+  margin-bottom: 21px;
   padding: 0;
   font-size: 15px;
   line-height: 1.6;
   color: $color-text-light;
+
+  @media (min-width: $tablet-width) {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    font-size: 17px;
+    line-height: 1.76;
+    margin-bottom: 22px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    margin: 0;
+    padding: 15px 0 0 57px;
+  }
 }
 
 .product__features {
   margin: 0;
-  margin-bottom: 20px;
+  margin-bottom: 28px;
+
+  @media (min-width: $tablet-width) {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+    font-size: 17px;
+    line-height: 1.76;
+    margin-bottom: 43px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+    padding: 30px 57px;
+    margin-bottom: 50px;
+  }
 }
 
 .product__image {
+  display: block;
   margin-bottom: 21px;
+  object-fit: fill;
+
+  @media (min-width: $tablet-width) {
+    grid-column: 2 / 4;
+    grid-row: 2 / 6;
+    margin: 0;
+    width: 334px;
+    height: 404px;
+    object-fit: cover;
+    padding-top: 11px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 3 / 4;
+    grid-row: 1 / 6;
+    width: 525px;
+    height: 636px;
+  }
 }
 
 .product__price {
@@ -39,8 +150,39 @@
   font-size: 17px;
   line-height: 1.41;
   font-weight: 700;
+
+  @media (min-width: $tablet-width) {
+    grid-column: 1 / 2;
+    grid-row: 4 / 5;
+    margin: 0;
+    margin-right: 47px;
+    font-size: 20px;
+    line-height: 1.18;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+    margin: 0;
+    align-self: center;
+  }
 }
 
 .product__button {
   margin-bottom: 43px;
+
+  @media (min-width: $tablet-width) {
+    grid-column: 1 / 2;
+    grid-row: 5 / 6;
+    width: 292px;
+    margin: 0;
+    align-self: end;
+    font-size: 17px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 2 / 3;
+    grid-row: 5 / 6;
+    justify-self: center;
+  }
 }
