--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -2,23 +2,72 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
+
+  @media (max-width: $mobile-width-only) {
+    position: absolute;
+    z-index: 1;
+    top: 79px;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+  }
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: row;
+    padding-left: 50px;
+    background-color: $color-bg-header;
+    border-top: 1px solid $color-nav-border;
+  }
+
+  @media (min-width: $desktop-width) {
+    background-color: $color-white;
+    border: none;
+    margin-right: 42px;
+    padding-left: 20px;
+  }
 }
 
 .site-list__item {
-  min-width: 320px;
-  min-height: 79px;
-  background-color: $color-white;
-  box-shadow: 0 1px 0 $color-border, inset 0 1px 0 $color-border;
-  box-sizing: border-box;
-  padding-left: 76px;
+  @media (max-width: $mobile-width-only) {
+    min-width: 320px;
+    min-height: 79px;
+    background-color: $color-white;
+    box-shadow: 0 1px 0 $color-border, inset 0 1px 0 $color-border;
+    box-sizing: border-box;
+    padding-left: 76px;
+  }
+
+  &:first-child {
+    @media (min-width: $desktop-width) {
+      border-right: 1px solid $color-nav-border;
+    }
+  }
 }
 
 .site-list__link {
   display: block;
   text-decoration: none;
   color: $color-text;
-  font-size: 17px;
-  line-height: 1.41;
   font-weight: 700;
-  padding-top: 29px;
+
+  @media (max-width: $mobile-width-only) {
+    font-size: 17px;
+    line-height: 1.41;
+    padding-top: 29px;
+  }
+
+  @media (min-width: $tablet-width) {
+    font-size: 15px;
+    line-height: 1.6;
+    padding: 21px 0;
+    margin-right: 37px;
+  }
+
+  @media (min-width: $desktop-width) {
+    font-size: 17px;
+    line-height: 1.41;
+    padding: 33px 36px 31px 31px;
+    margin: 0;
+  }
 }
