--- a/source/sass/blocks/user-list.scss
+++ b/source/sass/blocks/user-list.scss
@@ -2,27 +2,78 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
+
+  @media (max-width: $mobile-width-only) {
+    position: absolute;
+    z-index: 1;
+    top: 237px;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+  }
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: row;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 .user-list__item {
-  min-width: 320px;
-  min-height: 79px;
-  background-color: $color-white;
-  box-shadow: 0 1px 0 $color-border, inset 0 1px 0 $color-border;
-  box-sizing: border-box;
-  padding-left: 30px;
+  @media (max-width: $mobile-width-only) {
+    min-width: 320px;
+    min-height: 79px;
+    background-color: $color-white;
+    box-shadow: 0 1px 0 $color-border, inset 0 1px 0 $color-border;
+    box-sizing: border-box;
+    padding-left: 30px;
+  }
+
+  &:first-child {
+    @media (min-width: $tablet-width) {
+      display: block;
+      width: 18px;
+      height: 18px;
+      padding: 36px 32px 34px;
+      border-left: 1px solid $color-nav-border;
+      border-right: 1px solid $color-nav-border;
+    }
+  }
+
+  &:last-child {
+    @media (min-width: $tablet-width) {
+      padding: 32px 31px;
+    }
+  }
 }
 
 .user-list__link {
-  display: block;
+  display: inline-block;
   text-decoration: none;
   color: $color-text;
   font-size: 17px;
   line-height: 1.41;
   font-weight: 700;
-  padding-top: 29px;
+
+  @media (max-width: $mobile-width-only) {
+    padding-top: 29px;
+  }
 }
 
 .user-list__icon {
   margin-right: 22px;
+
+  @media (min-width: $tablet-width) {
+    margin-right: 26px;
+  }
+}
+
+.user-list__text {
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
 }
