--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,6 +8,7 @@
 @import "./blocks/main-header.scss";
 @import "./blocks/main-nav.scss";
 @import "./blocks/site-list.scss";
+@import "./blocks/assortement-list.scss";
 @import "./blocks/user-list.scss";
 @import "./blocks/intro.scss";
 @import "./blocks/product.scss";
