--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -2,19 +2,58 @@
   display: grid;
   grid-template-rows: auto auto auto;
   row-gap: 29px;
+
+  @media (min-width: $tablet-width) {
+    row-gap: 51px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto;
+    column-gap: 50px;
+  }
 }
 
 .catalog__item {
   border: 1px solid $color-border;
+
+  @media (min-width: $tablet-width) and (max-width: 1149px) {
+    display: flex;
+    max-height: 334px;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
 }
 
-.catalog__link {
+.catalog__link-image {
+  display: block;
+
+  @media (min-width: $tablet-width) and (max-width: 1149px) {
+    width: 334px;
+    height: 334px;
+    margin: 0;
+  }
+}
+
+.catalog__link-subtitle {
   display: block;
   text-decoration: none;
+  box-sizing: border-box;
 }
 
 .catalog__image {
-  margin-bottom: 21px;
+  margin-bottom: 22px;
+
+  @media (min-width: $tablet-width) {
+    width: 334px;
+    height: 334px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 315px;
+    height: 462px;
+    margin-bottom: 11px;
+  }
 }
 
 .catalog__subtitle {
@@ -22,6 +61,23 @@
   line-height: 1.41;
   padding-left: 28px;
   margin-bottom: 6.5px;
+
+  @media (min-width: $tablet-width) and (max-width: 1149px) {
+    padding: 0;
+    padding-top: 27px;
+    box-sizing: border-box;
+    font-size: 20px;
+    line-height: 1.2;
+    margin-bottom: 8.5px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 26px;
+    padding-top: 11px;
+    font-size: 20px;
+    line-height: 1.2;
+    margin-bottom: 5.5px;
+  }
 }
 
 .catalog__description {
@@ -30,6 +86,29 @@
   padding-left: 28px;
   font-size: 13px;
   line-height: 2.31;
+
+  @media (min-width: $tablet-width) and (max-width: 1149px) {
+    margin-bottom: 195px;
+    padding: 0;
+    font-size: 15px;
+    line-height: 2;
+  }
+
+  @media (min-width: $desktop-width) {
+    font-size: 15px;
+    line-height: 2;
+    margin-bottom: 61px;
+  }
+}
+
+.catalog__item:last-child .catalog__description {
+  @media (min-width: $tablet-width) and (max-width: 1149px) {
+    margin-bottom: 172px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 38px;
+  }
 }
 
 .catalog__price-cart {
@@ -40,14 +119,45 @@
 
   &::after {
     position: absolute;
+    top: -23px;
+    left: 27px;
+    content: "";
     width: 204px;
     height: 1px;
+    background-color: $color-border;
+
+    @media (min-width: $tablet-width) {
+      top: -26px;
+      left: 0;
+      width: 268px;
+    }
+
+    @media (min-width: $desktop-width) {
+      top: -26px;
+      left: 26px;
+      width: 256px;
+    }
+  }
+
+  @media (min-width: $tablet-width) and (max-width: 1149px) {
+    width: 268px;
+    box-sizing: border-box;
+    padding: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 0 32px 22.6px 27px;
   }
 }
 
 .catalog__price {
   font-size: 15px;
   line-height: 1.6;
+
+  @media (min-width: $tablet-width) {
+    font-size: 17px;
+    line-height: 1.41;
+  }
 }
 
 .catalog__to-cart {
