--- a/source/sass/blocks/filter.scss
+++ b/source/sass/blocks/filter.scss
@@ -8,61 +8,220 @@
   margin: 0;
   padding: 0;
 
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-columns: 168px auto;
+    grid-template-rows: auto;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 225px auto;
+  }
+
   &--type {
-    margin-bottom: 40px;
+    margin-bottom: 44px;
+
+    @media (min-width: $tablet-width) {
+      padding-left: 50px;
+      margin-bottom: 68px;
+    }
+
+    @media (min-width: $desktop-width) {
+      margin-bottom: 67px;
+    }
   }
 
   &--color {
-    margin-bottom: 41px;
+    margin-bottom: 44px;
+
+    @media (min-width: $tablet-width) {
+      margin-bottom: 0;
+      background-color: $color-bg-grey;
+    }
   }
 
   &--name {
-    margin-bottom: 10px;
+    margin-bottom: 12px;
+
+    @media (min-width: $tablet-width) {
+      padding-left: 50px;
+      margin-bottom: 29px;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding: 0 176px 0 0;
+      margin-bottom: 30px;
+    }
   }
 
   &--phone {
-    margin-bottom: 33px;
+    margin-bottom: 36px;
+    position: relative;
+
+    @media (min-width: $tablet-width) {
+      margin-bottom: 0;
+      background-color: $color-bg-grey;
+    }
+
+    &::after {
+      position: absolute;
+      content: url("../../img/phone-icon.svg");
+      width: 25px;
+      height: 24px;
+      top: 30px;
+      right: 7px;
+
+      @media (min-width: $tablet-width) {
+        top: 60px;
+        right: 76px;
+      }
+
+      @media (min-width: $desktop-width) {
+        right: 234px;
+      }
+    }
   }
 
   &--email {
-    margin-bottom: 33px;
-  }
-}
+    margin-bottom: 36px;
+    position: relative;
 
-.filter__legend {
-  position: relative;
-  margin-bottom: 32px;
+    @media (min-width: $tablet-width) {
+      margin-bottom: 50px;
+      padding-bottom: 50px;
+      background-color: $color-bg-grey;
+    }
 
-  &--name {
-    margin-bottom: 27px;
-  }
+    &::after {
+      position: absolute;
+      content: url("../../img/mail-icon.svg");
+      width: 32px;
+      height: 21px;
+      top: 36px;
+      right: 4px;
 
-  &--phone {
-    margin-bottom: 0;
-  }
+      @media (min-width: $tablet-width) {
+        top: 41px;
+        right: 72px;
+      }
 
-  &--email {
-    margin-bottom: 2px;
+      @media (min-width: $desktop-width) {
+        top: 42px;
+        right: 230px;
+      }
+    }
   }
 
   &--comments {
-    margin-bottom: 20px;
+    margin-bottom: 2px;
+
+    @media (min-width: $tablet-width) {
+      padding: 0 50px;
+      margin-bottom: 34px;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding: 0 226px 0 0;
+      margin-bottom: 32px;
+    }
+  }
+}
+
+.filter__title {
+  position: relative;
+  margin: 0;
+  margin-bottom: 35px;
+  font-size: 16px;
+  line-height: 0.94;
+
+  &--type {
+    @media (min-width: $desktop-width) {
+      padding-top: 2px;
+      padding-left: 62px;
+    }
   }
 
+  &--color {
+    margin-bottom: 35px;
+
+    @media (min-width: $tablet-width) {
+      padding: 66px 0 0 51px;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding: 69px 0 0 113px;
+    }
+  }
+
+  &--name {
+    margin-bottom: 29px;
+
+    @media (min-width: $tablet-width) {
+      padding-top: 68px;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding: 70px 0 0 112px;
+    }
+  }
+
+  &--phone {
+    margin-bottom: 4px;
+
+    @media (min-width: $tablet-width) {
+      padding: 66px 0 0 51px;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding-left: 112px;
+    }
+  }
+
+  &--email {
+    margin-bottom: 5px;
+
+    @media (min-width: $tablet-width) {
+      padding: 43px 0 0 51px;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding: 45px 0 0 114px;
+    }
+  }
+
+  &--comments {
+    margin-bottom: 22px;
+
+    @media (min-width: $tablet-width) {
+      padding: 21px 0 0 1px;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding: 21px 0 0 112px;
+    }
+  }
 
   &::after {
-    content: "";
-    position: absolute;
-    width: 200px;
-    height: 1px;
-    left: 60px;
-    top: 10px;
-    background: #62d1ba;
+    @media (max-width: $mobile-width-only) {
+      content: "";
+      position: absolute;
+      width: 200px;
+      height: 1px;
+      left: 60px;
+      top: 6px;
+      background: #62d1ba;
+    }
   }
 
   &--email::after {
-    width: 183px;
-    left: 78px;
+    @media (max-width: $mobile-width-only) {
+      width: 183px;
+      left: 78px;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    grid-column: 1 / 2;
   }
 }
 
@@ -75,6 +234,44 @@
   &--checkbox {
     padding-left: 61px;
   }
+
+  @media (min-width: $tablet-width) {
+    grid-column: 2 / 3;
+  }
+}
+
+.filter__list--radio {
+  @media (min-width: $tablet-width) {
+    padding: 0;
+    padding-left: 80px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 30px;
+  }
+}
+
+.filter__list--checkbox {
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 0;
+    padding-left: 71px;
+    margin-bottom: 66px;
+  }
+
+  @media (min-width: $desktop-width) {
+    justify-content: flex-start;
+    padding-left: 0;
+    margin-bottom: 62px;
+  }
+}
+
+.filter__list--name {
+  @media (min-width: $tablet-width) {
+    padding-top: 53px;
+  }
 }
 
 .filter__item {
@@ -82,10 +279,25 @@
 
   &--type {
     margin-bottom: 24px;
+
+    @media (min-width: $tablet-width) {
+      margin-bottom: 56px;
+    }
   }
 
   &--color {
     margin-bottom: 43px;
+
+    @media (min-width: $tablet-width) {
+      width: 200px;
+      padding: 61px 0 0 54px;
+      margin-bottom: 0;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 182px;
+      padding: 65px 0 0 81px;
+    }
   }
 
   &:last-of-type {
@@ -108,24 +320,50 @@
     position: relative;
     cursor: pointer;
   }
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    align-items: baseline;
+    font-size: 19px;
+    line-height: 0.95;
+  }
 }
 
 .filter__mark {
   position: absolute;
-  top: -12px;
-  left: -62px;
-  background-color: $color-white;
+  top: -11px;
+  left: -61px;
+  background-color: transparent;
   border: 2px solid $color-text-light;
 
   &--radio {
     width: 38px;
     height: 38px;
     border-radius: 50%;
+
+    @media (min-width: $tablet-width) {
+      width: 46px;
+      height: 46px;
+      top: -17px;
+      left: -78px;
+    }
   }
 
   &--checkbox {
-    width: 36px;
-    height: 36px;
+    width: 34px;
+    height: 34px;
+
+    @media (min-width: $tablet-width) {
+      width: 48px;
+      height: 48px;
+      top: -15px;
+      left: -83px;
+    }
+
+    @media (min-width: $desktop-width) {
+      top: -20px;
+      left: -79px;
+    }
   }
 }
 
@@ -138,6 +376,7 @@
   line-height: 1.06;
   border: none;
   border-bottom: 2px solid $color-text;
+  background-color: transparent;
 
   &--textarea {
     width: 260px;
@@ -146,6 +385,76 @@
     border: 2px solid $color-text-light;
     box-sizing: border-box;
     margin-bottom: 18px;
+
+    @media (min-width: $tablet-width) {
+      width: 100%;
+      font-size: 19px;
+      line-height: 0.95;
+      padding: 15px;
+    }
+  }
+}
+
+.filter__input-name {
+  @media (min-width: $tablet-width) {
+    width: 100%;
+    font-size: 19px;
+    line-height: 0.95;
+    margin-right: 50px;
+    margin-left: 25px;
+    padding-left: 18px;
+  }
+}
+
+.filter__input-phone {
+  @media (min-width: $tablet-width) {
+    width: 480px;
+    font-size: 19px;
+    line-height: 0.95;
+    margin-right: 50px;
+    margin-left: 50px;
+    padding-left: 18px;
+    padding-top: 51px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 679px;
+    margin: 0;
+    padding-top: 49px;
+  }
+}
+
+.filter__input-email {
+  @media (min-width: $tablet-width) {
+    width: 480px;
+    font-size: 19px;
+    line-height: 0.95;
+    margin-right: 50px;
+    margin-left: 49px;
+    padding-left: 18px;
+    padding-top: 27px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 679px;
+    margin: 0;
+    padding-top: 27px;
+  }
+}
+
+.filter__wrapper {
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: $tablet-width) {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
+    padding: 0 50px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 0 226px 0 225px;
   }
 }
 
@@ -154,11 +463,23 @@
   line-height: 1.14;
   color: $color-text-light;
   margin: 0;
-  margin-bottom: 29px;
+  margin-bottom: 27px;
+
+  @media (min-width: $tablet-width) {
+    order: 1;
+    font-size: 17px;
+    line-height: 1.76;
+  }
 }
 
 .filter__button {
   margin-bottom: 55px;
   font-size: 17px;
   line-height: 0.94;
+  padding-top: 5px;
+
+  @media (min-width: $tablet-width) {
+    width: 230px;
+    margin-bottom: 51px;
+  }
 }
