--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,15 +1,22 @@
-//Uncomment below to close the menu//
-.main-nav--hidden {
-  display: none;
-}
-
-.main-nav--visible {
-  @media (min-width: $tablet-width) {
-    display: flex;
+.main-nav--hidden .site-list,
+.main-nav--hidden .user-list {
+  @media (max-width: $mobile-width-only) {
+    display: none;
   }
 }
 
-.main-nav--primary {
+.main-nav {
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+.main-nav--visible {
+  display: block;
+}
+
+.site-list {
   @media (min-width: $tablet-width) {
     order: 1;
   }
@@ -19,7 +26,7 @@
   }
 }
 
-.main-nav--secondary {
+.user-list {
   @media (min-width: $tablet-width) {
     order: 0;
   }
@@ -42,5 +49,85 @@
     display: flex;
     flex-direction: row;
     order: 1;
+  }
+}
+
+.main-nav__toggle {
+  position: relative;
+  display: block;
+  margin: 0;
+  margin-right: 30px;
+  padding: 0;
+  width: 20px;
+  height: 14px;
+  background-color: $color-white;
+  border: none;
+  cursor: pointer;
+
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
+}
+
+.main-nav--hidden .main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 20px;
+  height: 2px;
+  background-color: $color-text;
+  box-shadow: 0 6px 0 0 $color-text, 0 12px 0 0 $color-text;
+}
+
+.main-nav--visible .main-nav__toggle {
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: -3px;
+    width: 27px;
+    height: 2px;
+    background-color: $color-text;
+  }
+
+  &::before {
+    transform: rotate(45deg);
+    box-shadow: none;
+  }
+
+  &::after {
+    transform: rotate(-45deg);
+  }
+}
+
+.main-nav__text {
+  display: block;
+  margin: 0;
+  background-color: $color-bg-header;
+  border-top: 1px solid $color-nav-border;
+
+  @media (max-width: $mobile-width-only) {
+    display: none;
+  }
+
+  @media (min-width: $tablet-width) {
+    padding: 21px 49px 21px 96px;
+    font-size: 15px;
+    line-height: 1.6;
+    color: $color-text-light;
+    background-color: $color-bg-grey;
+    display: block;
+    order: 3;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 18px 51px 18px 94px;
+    order: 4;
+  }
+
+  &--theme-light {
+    background-color: $color-bg-header;
   }
 }
