--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -11,7 +11,6 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding-top: 40px;
     grid-template-columns: 118px auto auto;
   }
 
@@ -48,7 +47,7 @@
     z-index: 1;
     font-size: 53px;
     line-height: 1.08;
-    padding: 72px 0 0 57px;
+    padding: 61px 0 0 57px;
     margin: 0;
   }
 }
@@ -70,7 +69,7 @@
   @media (min-width: $desktop-width) {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
-    padding: 80px 0 0 45px;
+    padding: 69px 0 0 45px;
   }
 }
 
@@ -113,7 +112,7 @@
   @media (min-width: $desktop-width) {
     grid-column: 2 / 3;
     grid-row: 3 / 4;
-    padding: 30px 57px;
+    padding: 32px 57px;
     margin-bottom: 50px;
   }
 }
@@ -138,6 +137,7 @@
     grid-row: 1 / 6;
     width: 525px;
     height: 636px;
+    padding: 0;
   }
 }
 
@@ -184,5 +184,6 @@
     grid-column: 2 / 3;
     grid-row: 5 / 6;
     justify-self: center;
+    padding-top: 5px;
   }
 }
