Декоративные элементы главной страницы

--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,7 +1,7 @@
 .catalog {
   display: grid;
   grid-template-rows: auto auto auto;
-  row-gap: 29px;
+  row-gap: 27px;
 
   @media (min-width: $tablet-width) {
     row-gap: 51px;
@@ -22,6 +22,16 @@
     max-height: 334px;
     flex-direction: column;
     flex-wrap: wrap;
+  }
+
+  @media (min-width: $desktop-width) {
+    &:hover {
+      box-shadow: 0 6px 10px $color-nav-border;
+    }
+
+    &:active {
+      box-shadow: 0 3px 5px $color-nav-border;
+    }
   }
 }
 
@@ -77,6 +87,14 @@
     font-size: 20px;
     line-height: 1.2;
     margin-bottom: 5.5px;
+  }
+
+  &:hover {
+    color: $color-link-hover;
+  }
+
+  &:active {
+    color: $color-link-active;
   }
 }
 
@@ -167,4 +185,16 @@
   padding: 0;
   background-color: transparent;
   cursor: pointer;
+}
+
+.catalog__icon {
+  fill: $color-icon;
+}
+
+.catalog__to-cart:hover .catalog__icon {
+  fill: $color-green-light;
+}
+
+.catalog__to-cart:active .catalog__icon {
+  fill: $color-icon-active;
 }
