--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -14,6 +14,7 @@
 
 .main-header__logo {
   object-fit: fill;
+  cursor: pointer;
 
   @media (max-width: $mobile-width-only) {
     margin-right: 67px;
@@ -34,5 +35,13 @@
     left: 500px;
     width: 149px;
     height: 72px;
+  }
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
   }
 }
