--- a/source/sass/blocks/assortement-list.scss
+++ b/source/sass/blocks/assortement-list.scss
@@ -22,4 +22,12 @@
   font-size: 15px;
   line-height: 1.6;
   font-weight: 700;
+
+  &:hover {
+    color: $color-link-hover;
+  }
+
+  &:active {
+    color: $color-link-active;
+  }
 }
