--- a/source/sass/blocks/filter.scss
+++ b/source/sass/blocks/filter.scss
@@ -117,7 +117,7 @@
 
     @media (min-width: $tablet-width) {
       padding: 0 50px;
-      margin-bottom: 34px;
+      margin-bottom: 36px;
     }
 
     @media (min-width: $desktop-width) {
@@ -161,7 +161,7 @@
     }
 
     @media (min-width: $desktop-width) {
-      padding: 70px 0 0 112px;
+      padding: 69px 0 0 112px;
     }
   }
 
@@ -394,6 +394,18 @@
       padding: 15px;
     }
   }
+
+  &:hover {
+    border-color: $color-email-underline;
+  }
+
+  &:active {
+    border-color: $color-email-underline;
+  }
+
+  &:focus-visible {
+    outline: none;
+  }
 }
 
 .filter__input-name {
@@ -482,5 +494,15 @@
   @media (min-width: $tablet-width) {
     width: 230px;
     margin-bottom: 51px;
+  }
+
+  &:hover {
+    background-color: $color-text-light;
+    color: $color-white;
+  }
+
+  &:active {
+    background-color: $color-text-light;
+    color: $color-btn-active;
   }
 }
