Декоративные элементы главной страницы

--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -8,7 +8,7 @@
     flex-wrap: wrap;
     padding: 0 50px;
     margin-bottom: 154px;
-    background-image: url("../../img/review-bg.jpg"), linear-gradient(to right, $color-white 50px, $color-bg-grey 50px, $color-bg-grey 397px, $color-white 397px);
+    background-image: url("../../img/review-bg.jpg"), linear-gradient(to right, $color-bg-grey 350px, $color-white 350px);
     background-position: left center, left center;
     background-repeat: no-repeat, no-repeat;
   }
@@ -16,6 +16,7 @@
   @media (min-width: $desktop-width) {
     padding: 0 49px 0 200px;
     margin-bottom: 162px;
+    background-image: url("../../img/review-bg.jpg"), linear-gradient(to right, $color-white 50px, $color-bg-grey 50px, $color-bg-grey 398px, $color-white 398px);
     background-position: 6% 100%;
   }
 
