--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,3 +1,13 @@
+.main-nav {
+  display: flex;
+  align-items: center;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
 .main-nav--hidden .site-list,
 .main-nav--hidden .user-list {
   @media (max-width: $mobile-width-only) {
@@ -5,34 +15,42 @@
   }
 }
 
-.main-nav {
-  @media (min-width: $tablet-width) {
-    display: flex;
-    flex-wrap: wrap;
-  }
-}
-
 .main-nav--visible {
+  display: flex;
+  align-items: center;
+}
+
+.main-nav__logo {
   display: block;
-}
+  object-fit: fill;
+  cursor: pointer;
 
-.site-list {
+  @media (max-width: $mobile-width-only) {
+    margin-right: 67px;
+    padding-top: 5px;
+  }
+
   @media (min-width: $tablet-width) {
-    order: 1;
+    width: 113px;
+    height: 46px;
+    margin-right: 209px;
+    padding: 2px 0 0 48px;
   }
 
   @media (min-width: $desktop-width) {
-    order: 0;
-  }
-}
-
-.user-list {
-  @media (min-width: $tablet-width) {
-    order: 0;
+    width: 149px;
+    height: 72px;
+    margin-right: 101px;
+    padding: 0;
+    padding-top: 2px;
   }
 
-  @media (min-width: $desktop-width) {
-    order: 1;
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
   }
 }
 
