--- a/source/sass/blocks/filter.scss
+++ b/source/sass/blocks/filter.scss
@@ -62,24 +62,6 @@
       margin-bottom: 0;
       background-color: $color-bg-grey;
     }
-
-    &::after {
-      position: absolute;
-      content: url("../../img/phone-icon.svg");
-      width: 25px;
-      height: 24px;
-      top: 30px;
-      right: 7px;
-
-      @media (min-width: $tablet-width) {
-        top: 60px;
-        right: 76px;
-      }
-
-      @media (min-width: $desktop-width) {
-        right: 234px;
-      }
-    }
   }
 
   &--email {
@@ -90,25 +72,6 @@
       margin-bottom: 50px;
       padding-bottom: 50px;
       background-color: $color-bg-grey;
-    }
-
-    &::after {
-      position: absolute;
-      content: url("../../img/mail-icon.svg");
-      width: 32px;
-      height: 21px;
-      top: 36px;
-      right: 4px;
-
-      @media (min-width: $tablet-width) {
-        top: 41px;
-        right: 72px;
-      }
-
-      @media (min-width: $desktop-width) {
-        top: 42px;
-        right: 230px;
-      }
     }
   }
 
@@ -424,8 +387,7 @@
     width: 480px;
     font-size: 19px;
     line-height: 0.95;
-    margin-right: 50px;
-    margin-left: 50px;
+    margin: 0 50px;
     padding-left: 18px;
     padding-top: 51px;
   }
@@ -452,6 +414,46 @@
     width: 679px;
     margin: 0;
     padding-top: 27px;
+  }
+}
+
+.filter__icon {
+  position: absolute;
+  fill: $color-icon;
+
+  &--phone {
+    top: 30px;
+    right: 8px;
+
+    @media (min-width: $tablet-width) {
+      top: 61px;
+      right: 76px;
+    }
+
+    @media (min-width: $desktop-width) {
+      top: 60px;
+      right: 233px;
+    }
+  }
+
+  &--email {
+    top: 36px;
+    right: 4px;
+
+    @media (min-width: $tablet-width) {
+      top: 42px;
+      right: 72px;
+    }
+
+    @media (min-width: $desktop-width) {
+      top: 42px;
+      right: 229px;
+    }
+  }
+
+  .filter__input:hover + &,
+  .filter__input:active + & {
+    fill: $color-email-underline;
   }
 }
 
