--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -34,13 +34,13 @@
     width: 113px;
     height: 46px;
     margin-right: 209px;
-    padding: 2px 0 0 48px;
+    padding-left: 48px;
   }
 
   @media (min-width: $desktop-width) {
     width: 149px;
     height: 72px;
-    margin-right: 101px;
+    margin-right: 102px;
     padding: 0;
     padding-top: 2px;
   }
