--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -5,6 +5,11 @@
   background-position: 100% -14%;
   background-repeat: no-repeat;
 
+  @media (min-resolution: 2dppx) {
+    background-image: url("../../img/intro-mobile@2x.jpg");
+    background-size: 100%;
+  }
+
   @media (min-width: $tablet-width) {
     position: relative;
     min-height: 680px;
@@ -12,6 +17,10 @@
     background-image: url("../../img/intro-tablet.jpg");
     background-position: 30% 106%;
     background-repeat: no-repeat;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/intro-tablet@2x.jpg");
+    }
   }
 
   @media (min-width: $desktop-width) {
@@ -21,6 +30,10 @@
     background-position: 50% 141%;
     background-repeat: no-repeat;
     margin-bottom: 54px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/intro-desktop@2x.jpg");
+    }
   }
 
   &::after {
